fix: Primary button is barely readable

--- a/src/index.css
+++ b/src/index.css
@@ -90,8 +90,8 @@ html, body, #root {
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.21 0.006 285.885);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.546 0.245 262.881);
-  --primary-foreground: oklch(0.379 0.146 265.522);
+  --primary: oklch(0.41 0.1191 263.61);
+  --primary-foreground: oklch(1 0 none);
   --secondary: oklch(0.274 0.006 286.033);
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.274 0.006 286.033);
